--- a/package.json
+++ b/package.json
@@ -32,6 +32,9 @@
     "webpack-dev-server": "^2.7.1"
   },
   "dependencies": {
-    "axios": "^0.18.0"
+    "axios": "^0.18.0",
+    "firebase": "^5.0.3",
+    "firebase-admin": "^5.12.1",
+    "firebase-functions": "^1.0.3"
   }
 }
